v.0.8: adds thin scrollbar, navbar centered/ onscroll change, fixes.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,7 @@
 .font-montserrat-light {
     font-family: 'Montserrat Light', sans-serif;
 }
+
+*, *::before, *::after {
+    scrollbar-width: thin;
+}
